@@ -1134,6 +1134,30 @@ class AnnotationsTest(fixtures.TestBase):
         assert b4.left is bin.left  # since column is immutable
         assert b4.right is not bin.right is not b2.right is not b3.right
 
+    def test_annotate_unique_traversal(self):
+        """test that items are copied only once during
+        annotate, deannotate traversal"""
+        table1 = table('table1', column('x'))
+        table2 = table('table1', column('y'))
+        a1 = table1.alias()
+        s = select([a1.c.x]).select_from(
+                a1.join(table2, a1.c.x==table2.c.y)
+            )
+
+        for sel in (
+            sql_util._deep_deannotate(s),
+            sql_util._deep_annotate(s, {'foo':'bar'}),
+            visitors.cloned_traverse(s, {}, {}),
+            visitors.replacement_traverse(s, {}, lambda x:None)
+        ):
+            # the columns clause isn't changed at all
+            assert sel._raw_columns[0].table is a1
+            # the from objects are internally consistent,
+            # i.e. the Alias at position 0 is the same
+            # Alias in the Join object in position 1
+            assert sel._froms[0] is sel._froms[1].left
+            eq_(str(s), str(sel))
+
     def test_bind_unique_test(self):
         t1 = table('t', column('a'), column('b'))
 
